HEAD
	+ Fixed setting of printers permissions
	+ s4sync: Check samba daemon is running
	+ Removed obsolete dns-$hostname account from OpenLDAP, it should be only
	  available in Samba
	+ Ignored and logged as errors the users, contacts and groups in OpenLDAP
	  that are not linked with Samba objects
	+ Fix delete GPLink: use gPLink attribute name as our checkers are
	  case sensitive
	+ Set allow_non_scanned_files = True on samba.conf by default to
	  avoid issues with antivirus when editing files
	+ EBox::Samba::LdbObject::setCritical cannot use lazy flag to work
	  correctly
3.2.14
	+ Fix NT_STATUS_ACCESS_DENIED opening files quering the DOS attributes
	  and passing them to open function
	+ Set OpenChange as not provisioned when Samba is reprovisioned
	+ Added a way to check whether we are managing the AD schema or not
	+ Samba provision failures when IPs are not set no longer talk
	  wrongly about internal interfaces
	+ Create directories in _setConf to avoid invalid group __USERS__ error
	+ Clean up openchange section in stub smb.conf file
	+ Fix typo in SambaLdapUser that fixes error in change email
	+ Change user modification hook from _modifyUser to _preModifyUser
	+ Throw DataExists exception if the user try to rename a user on a
	  container and already exists
	+ Check for duplicated DN on user creation and show a proper error, not
	  an internal exception.
	+ Remove group share on group deletion
	+ Set the setShareRightsReset flag on SambaSharesPermissions row deletion
	+ Samba log helper is now aware of utf8
	+ EBox::Samba::LdbObject::deleteObject - Delete all childs before self
	  deletion
3.2.13
	+ User profiles are only created if the OpenLDAP sync exists, otherwise,
	  defer it until s4sync does the synchronization
	+ Typo fix in netbios validation
	+ Check if objects are system critical before deletion
	+ Improved migration code from 3.2.11
3.2.12
	+ Provision - Clear link attribute on __USERS__ entry when provisioning as
	  adc