@@ -1,4 +1,5 @@
 HEAD
+	+ Share group name validation code with users code
 	+ Fixed setting of printers permissions
 	+ s4sync: Check samba daemon is running
 	+ Removed obsolete dns-$hostname account from OpenLDAP, it should be only
